--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "merge-json-cli": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "stylelint": "16.7.0",
-    "stylelint-config-standard": "36.0.1"
+    "stylelint-config-standard": "36.0.1",
+    "playwright": "^1.56.1"
   }
 }
